# pytest-allure-propagate

./: .flake8  .gitignore  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  tmp.txt
.github/actions/build-allure-report/: action.yml
.github/actions/python-lint/: action.yml
.github/actions/python-test/: action.yml
.github/workflows/: allure-pages.yml  ci.yml  lint.yml  publish.yml  release-on-tag.yml  test.yml
examples/: test_showcase.py
src/allure_pytest_ext/: __init__.py  plugin.py
tests/: conftest.py  test_aggregate_step.py  test_default_step.py  test_logging.py  test_step_propagate.py  test_step_raise_on_parent.py  test_steps.py  test_version_guard.py  utils_allure.py
typings/allure/: __init__.pyi
