[project]
name = "pytest-allure-propagate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[dependency-groups]
dev = [
    "black>=24.8.0",
    "flake8>=5.0.4",
    "ipython>=8.12.3",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
]

[tool.black]
line-length = 120
exclude = '''
(
  /(\.git|\.venv|venv|build|dist|\.mypy_cache|\.pytest_cache)/
)
'''

[tool.flake8]
max-line-length = 120
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    ".mypy_cache",
    ".pytest_cache"
]

[tool.mypy]
python_version = "3.8"
strict = true
exclude = '''(?x)(
    ^\.venv
  | ^venv
  | ^build
  | ^dist
  | ^\.mypy_cache
  | ^\.pytest_cache
)'''
